--- a/vue/src/index.css
+++ b/vue/src/index.css
@@ -1,3 +1,9 @@
+:root {
+    --color-primary: #0095C7;
+    --color-secondary: #3C3B3C;
+    /* ... */
+  }
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
